# ray-tracer

./: .gitignore  CMakeLists.txt  Makefile  do.sh  docs  lib.lua  raytracer  scene  scene.lua  scene2  scene3  scene4  scene5  scene6
lualib/: compose.lua  csg.lua  lib.lua  materials.lua  solids.lua  transformations.lua  utils.lua
src/: color.c  color.h  defines.h  image.c  image.h  main.c  material.h  plane.c  plane.h  point.c  point.h  ray.c  ray.h  scene.c  scene.h  sphere.c  sphere.h  utils.c  utils.h
